# teaos

./: .gitignore  Cargo.toml  build.rs  link.x  rust-toolchain.toml
.cargo/: config.toml
aws/: make-ami.sh
common/freelist/: Cargo.toml
common/freelist/src/: lib.rs
crates/boot/: Cargo.toml
crates/boot/src/: acpi.rs  (+6 more)
crates/crc/: Cargo.toml
crates/elf/: Cargo.toml
crates/teaos/: build.rs  link.ld
crates/tos-boot/: Cargo.toml
crates/tos-crc/: Cargo.toml
crates/tos-elf/: Cargo.toml
crates/tos-io-traits/: Cargo.toml
crates/tos-teaos/: Cargo.toml
dtb/: Cargo.toml
dtb/src/: error.rs  lib.rs  read.rs
kernel/boot/: Cargo.toml
kernel/boot-info/: Cargo.toml
kernel/crc/: Cargo.toml
kernel/elf/: Cargo.toml
kernel/kernel/: Cargo.toml  link.ld
kernel/kstd/: Cargo.toml
qemu/: run.sh
src/: cpu.rs  crc32.rs  device_tree.rs  log.rs  main.rs  print.rs  serial.rs  start.S  uefi.rs
src/uefi/: sys.rs
teaos/: Cargo.toml
teaos/aarch64/: Cargo.toml
teaos/acpi/: Cargo.toml
teaos/boot/: Cargo.toml
teaos/boot-info/: Cargo.toml
teaos/boot/src/: acpi.rs  info.rs  lib.rs  log.rs  paging.rs
teaos/boot/src/uefi/: boot_services.rs  mod.rs  protocol.rs  sys.rs
teaos/cpu/: Cargo.toml
teaos/elf/: Cargo.toml
teaos/io-traits/: Cargo.toml
teaos/kernel/: Cargo.toml
teaos/kstd/: Cargo.toml
teaos/src/: cpu.rs  crc32.rs  main.rs  panic.rs  uart.rs
teaos/sync/: Cargo.toml
teaos/teaos/: Cargo.toml  link.ld
teaos/user/: Cargo.toml  build.rs
user/sys/: Cargo.toml
user/user/: Cargo.toml  link.ld
xtask/: Cargo.toml
xtask/src/: main.rs
(+103 files in other folders)
