[workspace]
members = [
    "teaos/boot",
    "teaos/crc",
    "teaos/elf",
    "teaos/kstd",
    "teaos/teaos",
    "xtask",
]
resolver = "2"

# Bump the opt-level for the `teaos` crate in debug mode. Without this, filling
# pages in the physical allocator is unbearably slow.
[profile.dev.package.teaos]
opt-level = 2
