[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argh = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-s3 = "1"
fatfs = "0.3"
fscommon = "0.1"
gpt = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
