[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
argh = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ebs = "1"
aws-sdk-ec2 = "1"
base64 = "0.22"
fatfs = "0.3"
fscommon = "0.1"
gpt = "4"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
