[package]
name = "boot"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "boot"
test = false
harness = false

[dependencies]
aarch64 = { path = "../aarch64" }
acpi = { path = "../acpi" }
boot-info = { path = "../boot-info" }
crc = { path = "../crc" }
elf = { path = "../elf" }
kstd = { path = "../kstd" }
